--- a/.github/actions/crates-io-publish/action.yml
+++ b/.github/actions/crates-io-publish/action.yml
@@ -1,6 +1,12 @@
 name: Crates.io Publish
 description: Publish library to crates.io
 
+inputs:
+    cargo-extra-args:
+        description: "Extra cargo args (e.g. --all-features, --features foo,bar, or empty string)"
+        required: false
+        default: "--all-features"
+
 runs:
     using: composite
     steps:
@@ -8,6 +14,6 @@ runs:
         - name: Build Release & publish crate
           shell: bash
           run: |
-              cargo build --release --all-features
-              cargo doc --release --all-features
-              cargo publish --all-features
+              cargo build --release ${{ inputs.cargo-extra-args }}
+              cargo doc --release ${{ inputs.cargo-extra-args }}
+              cargo publish ${{ inputs.cargo-extra-args }}
