--- a/.github/actions/gh-pages-publish/action.yml
+++ b/.github/actions/gh-pages-publish/action.yml
@@ -1,13 +1,19 @@
 name: Site publish
 description: Upload README, rust docs & llvm-coverage-report to gh-pages
 
+inputs:
+    cargo-extra-args:
+        description: "Extra cargo args (e.g. --all-features, --features foo,bar, or empty string)"
+        required: false
+        default: "--all-features"
+
 runs:
     using: composite
     steps:
         - name: Coverage report
           shell: bash
           run: |
-              cargo llvm-cov --workspace --all-features --html
+              cargo llvm-cov --workspace ${{ inputs.cargo-extra-args }} --html
 
         - name: Move documentation to temp folder
           shell: bash
