--- a/.github/actions/rust-clippy/action.yml
+++ b/.github/actions/rust-clippy/action.yml
@@ -1,6 +1,12 @@
 name: "Rust Clippy"
 description: "Run Clippy lints with warnings as errors"
 
+inputs:
+    cargo-extra-args:
+        description: "Extra cargo args (e.g. --all-features, --features foo,bar, or empty string)"
+        required: false
+        default: "--all-features"
+
 runs:
     using: "composite"
     steps:
@@ -8,4 +14,4 @@ runs:
           shell: bash
           run: |
               rustup component add clippy
-              cargo clippy --workspace --all-targets --all-features -- -D warnings
+              cargo clippy --workspace --all-targets ${{ inputs.cargo-extra-args }} -- -D warnings
