--- a/.github/actions/rust-llvm-cov/action.yml
+++ b/.github/actions/rust-llvm-cov/action.yml
@@ -1,6 +1,12 @@
 name: "Rust Coverage (llvm-cov)"
 description: "Generate code coverage reports using cargo-llvm-cov"
 
+inputs:
+    cargo-extra-args:
+        description: "Extra cargo args (e.g. --all-features, --features foo,bar, or empty string)"
+        required: false
+        default: "--all-features"
+
 runs:
     using: "composite"
     steps:
@@ -15,4 +21,4 @@ runs:
           shell: bash
           run: |
               cargo llvm-cov clean --workspace
-              cargo llvm-cov --workspace --all-features --cobertura --output-path=target/cobertura.xml
+              cargo llvm-cov --workspace ${{ inputs.cargo-extra-args }} --cobertura --output-path=target/cobertura.xml
