--- a/.github/actions/gh-pages-publish/action.yml
+++ b/.github/actions/gh-pages-publish/action.yml
@@ -10,12 +10,19 @@ inputs:
 runs:
     using: composite
     steps:
+        - name: Checkout
+          uses: actions/checkout@v6
+          with:
+              fetch-depth: 0
+
         - name: Move documentation to temp folder
           shell: bash
           run: |
               mkdir docs0
               touch docs0/.nojekyll
-              cp README.md docs0/
+              if [ -f README.md ]; then
+                  cp README.md docs0/
+              fi
               [ -d docs ] && cp -R docs docs0/
               [ -d target/doc ] && cp -R target/doc docs0
               [ -d target/llvm-cov ] && cp -R target/llvm-cov docs0
