Amend gh-pages-publish to deploy the pages after uploading

--- a/.github/actions/gh-pages-publish/action.yml
+++ b/.github/actions/gh-pages-publish/action.yml
@@ -97,3 +97,7 @@ runs:
           uses: actions/upload-pages-artifact@v4
           with:
               path: site
+
+        - name: Deploy
+          id: deployment
+          uses: actions/deploy-pages@v4
