--- a/.github/workflows/rust-publish.yml
+++ b/.github/workflows/rust-publish.yml
@@ -23,23 +23,27 @@ permissions:
 jobs:
     publish:
         runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v6
-              with:
-                  fetch-depth: 0
-            - uses: nigeleke/github/.github/actions/os-prerequisites@main
-              with:
-                  os: ubuntu-latest
-            - uses: nigeleke/github/.github/actions/rust-setup@main
-            - uses: nigeleke/github/.github/actions/rust-docs@main
-              with:
-                  cargo-extra-args: ${{ matrix.cargo-extra-args }}
-            - uses: nigeleke/github/.github/actions/rust-llvm-cov@main
-              with:
-                  cargo-extra-args: ${{ matrix.cargo-extra-args }}
-            - uses: nigeleke/github/.github/actions/codecov-publish@main
-              env:
-                  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-            - uses: nigeleke/github/.github/actions/gh-pages-publish@main
-              with:
-                  cargo-extra-args: ${{ matrix.cargo-extra-args }}
+
+    environment:
+        name: github-pages
+
+    steps:
+        - uses: actions/checkout@v6
+          with:
+              fetch-depth: 0
+        - uses: nigeleke/github/.github/actions/os-prerequisites@main
+          with:
+              os: ubuntu-latest
+        - uses: nigeleke/github/.github/actions/rust-setup@main
+        - uses: nigeleke/github/.github/actions/rust-docs@main
+          with:
+              cargo-extra-args: ${{ matrix.cargo-extra-args }}
+        - uses: nigeleke/github/.github/actions/rust-llvm-cov@main
+          with:
+              cargo-extra-args: ${{ matrix.cargo-extra-args }}
+        - uses: nigeleke/github/.github/actions/codecov-publish@main
+          env:
+              CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        - uses: nigeleke/github/.github/actions/gh-pages-publish@main
+          with:
+              cargo-extra-args: ${{ matrix.cargo-extra-args }}
