Amend gh-pages-publish to build site from jekyll template 2

--- a/.github/actions/gh-pages-publish/action.yml
+++ b/.github/actions/gh-pages-publish/action.yml
@@ -91,7 +91,7 @@ runs:
               EOF
 
         - name: Build with Jekyll
-          uses: [actions/jekyll-build-pages@v1]
+          uses: actions/jekyll-build-pages@v1
           with:
               source: ./site
               destination: ./_site
